feat: add decision trees

--- a/ex04a/red-cards.ipynb
+++ b/ex04a/red-cards.ipynb
@@ -2,20 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from sklearn.datasets import load_digits\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +36,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 301,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,17 +76,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = np.array(df[[\"height\", \"weight\", \"games\", \"victories\", \"ties\", \"defeats\", \"goals\", \"yellowCards\", \"yellowReds\", \"redCards\"]])\n",
+    "x = np.array(df[[\"rating\", \"height\", \"weight\", \"games\", \"victories\", \"ties\", \"defeats\", \"goals\", \"yellowCards\", \"yellowReds\", \"redCards\"]])\n",
     "y = np.array(df[\"rating\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,16 +117,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.08204569827118692"
+       "1.3011011572726483e-30"
       ]
      },
-     "execution_count": 310,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,9 +146,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.08204741592354999"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "errors = []\n",
     "for it in range(19):\n",
@@ -166,45 +174,8 @@
     "    prediction = reg.predict(X_test)\n",
     "\n",
     "    error = mean_squared_error(y_test, prediction)\n",
-    "    errors.append(error)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 315,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0.08235125454312034,\n",
-       " 0.08235075612650568,\n",
-       " 0.0823540272816621,\n",
-       " 0.08234944801304102,\n",
-       " 0.08235158874319264,\n",
-       " 0.08236189747836112,\n",
-       " 0.08235124607660657,\n",
-       " 0.08234894254791991,\n",
-       " 0.0823504036969278,\n",
-       " 0.08235089001785904,\n",
-       " 0.08235084055984629,\n",
-       " 0.08235233142093751,\n",
-       " 0.08235087756393891,\n",
-       " 0.08235147054927977,\n",
-       " 0.08235156159557988,\n",
-       " 0.08235829767604001,\n",
-       " 0.08235963858223852,\n",
-       " 0.08235071544210439,\n",
-       " 0.0823532457462094]"
-      ]
-     },
-     "execution_count": 315,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "errors"
+    "    errors.append(error)\n",
+    "np.average(errors)"
    ]
   }
  ],
