--- a/ex04a/red-cards.ipynb
+++ b/ex04a/red-cards.ipynb
@@ -2,27 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd\n"
+    "import pandas as pd\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename=os.path.join('Crowdsourcing Dataset','CrowdstormingDataJuly1st.csv') \n",
+    "filename=os.path.join('crowdstorm_disaggregated.csv') \n",
     "df = pd.read_csv(filename)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -32,11 +33,12 @@
        "       'weight', 'position', 'games', 'victories', 'ties', 'defeats', 'goals',\n",
        "       'yellowCards', 'yellowReds', 'redCards', 'photoID', 'rater1', 'rater2',\n",
        "       'refNum', 'refCountry', 'Alpha_3', 'meanIAT', 'nIAT', 'seIAT',\n",
-       "       'meanExp', 'nExp', 'seExp'],\n",
+       "       'meanExp', 'nExp', 'seExp', 'skintone', 'allreds', 'allredsStrict',\n",
+       "       'refCount'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,57 +49,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# TODO: Improve data preparation!\n",
     "# take average of the two raters\n",
-    "df[\"rating\"] = (df[\"rater1\"] + df[\"rater2\"]) / 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "df[\"rating\"] = (df[\"rater1\"] + df[\"rater2\"]) / 2\n",
     "# preliminary selection of features\n",
-    "df = df[[\"rating\", \"height\", \"weight\", \"games\", \"victories\", \"ties\", \"defeats\", \"goals\", \"yellowCards\", \"yellowReds\", \"redCards\"]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "df = df[[\"rating\", \"height\", \"weight\", \"games\", \"victories\", \"ties\", \"defeats\", \"goals\", \"yellowCards\", \"yellowReds\", \"redCards\"]]\n",
+    "# drop instances with undefined values => check if there aer better options: https://en.wikipedia.org/wiki/Missing_data\n",
     "df = df.dropna()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
     "x = np.array(df[[\"rating\", \"height\", \"weight\", \"games\", \"victories\", \"ties\", \"defeats\", \"goals\", \"yellowCards\", \"yellowReds\", \"redCards\"]])\n",
-    "y = np.array(df[\"rating\"])"
+    "y = np.array(df[\"redCards\"] / df[\"games\"]) # target should be the fraction of games with red cards"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn import linear_model\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import mean_squared_error"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,62 +95,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "reg = linear_model.LinearRegression()\n",
-    "reg.fit(X_train, y_train)\n",
-    "prediction = reg.predict(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.3011011572726483e-30"
+       "0.0007450238012380009"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "reg = linear_model.LinearRegression()\n",
+    "reg.fit(X_train, y_train)\n",
+    "prediction = reg.predict(X_test)\n",
     "mean_squared_error(y_test, prediction)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rating = x[:,0]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.08204741592354999"
+       "4.890885096727856e-07"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "errors = []\n",
+    "regr = RandomForestRegressor()\n",
+    "regr = regr.fit(X_train, y_train)\n",
+    "prediction = regr.predict(X_test)\n",
+    "mean_squared_error(y_test, prediction)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0007450214748805821\n",
+      "0.0007450214748805821\n"
+     ]
+    }
+   ],
+   "source": [
+    "errors1 = []\n",
+    "errors2 = []\n",
+    "rating = x[:,0]\n",
     "for it in range(19):\n",
     "    randomRating = np.random.permutation(rating)\n",
     "    data = x.copy()\n",
@@ -174,8 +169,18 @@
     "    prediction = reg.predict(X_test)\n",
     "\n",
     "    error = mean_squared_error(y_test, prediction)\n",
-    "    errors.append(error)\n",
-    "np.average(errors)"
+    "    errors1.append(error)\n",
+    "\n",
+    "    # Takes very long (ca. 5min)\n",
+    "    #regr = RandomForestRegressor()\n",
+    "    #regr = regr.fit(X_train, y_train)\n",
+    "    #prediction = regr.predict(X_test)\n",
+    "\n",
+    "    error = mean_squared_error(y_test, prediction)\n",
+    "    errors2.append(error)\n",
+    "\n",
+    "print(np.average(errors1))\n",
+    "print(np.average(errors2))"
    ]
   }
  ],
