chore: small changes

--- a/ex04a/red-cards.ipynb
+++ b/ex04a/red-cards.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,17 +13,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# using the disaggregated dataset from https://osf.io/akqt4/\n",
     "filename=os.path.join('crowdstorm_disaggregated.csv') \n",
     "df = pd.read_csv(filename)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +39,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 187,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,17 +65,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "x = np.array(df[[\"rating\", \"height\", \"weight\", \"games\", \"victories\", \"ties\", \"defeats\", \"goals\", \"yellowCards\", \"yellowReds\", \"redCards\"]])\n",
-    "y = np.array(df[\"redCards\"] / df[\"games\"]) # target should be the fraction of games with red cards"
+    "y = np.array(df[\"redCards\"] / df[\"games\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +105,7 @@
        "0.0007450238012380009"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 182,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,16 +119,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4.890885096727856e-07"
+       "4.056873982191155e-07"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 183,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,15 +142,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.0007450214748805821\n",
-      "0.0007450214748805821\n"
+      "0.0007450209493935446\n",
+      "0.0007450209493935446\n"
      ]
     }
    ],
@@ -172,9 +173,9 @@
     "    errors1.append(error)\n",
     "\n",
     "    # Takes very long (ca. 5min)\n",
-    "    #regr = RandomForestRegressor()\n",
-    "    #regr = regr.fit(X_train, y_train)\n",
-    "    #prediction = regr.predict(X_test)\n",
+    "    # regr = RandomForestRegressor()\n",
+    "    # regr = regr.fit(X_train, y_train)\n",
+    "    # prediction = regr.predict(X_test)\n",
     "\n",
     "    error = mean_squared_error(y_test, prediction)\n",
     "    errors2.append(error)\n",
