feat: update preprocessing

--- a/ex04a/red-cards.ipynb
+++ b/ex04a/red-cards.ipynb
@@ -2,29 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 257,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import os"
+    "import os\n",
+    "from sklearn.preprocessing import LabelBinarizer\n",
+    "from datetime import datetime"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [],
    "source": [
     "# using the disaggregated dataset from https://osf.io/akqt4/\n",
     "filename=os.path.join('crowdstorm_disaggregated.csv') \n",
-    "df = pd.read_csv(filename)"
+    "df = pd.read_csv(filename)\n",
+    "df = df.dropna()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +42,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 187,
+     "execution_count": 259,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,32 +53,177 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 260,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Improve data preparation!\n",
-    "# take average of the two raters\n",
-    "df[\"rating\"] = (df[\"rater1\"] + df[\"rater2\"]) / 2\n",
-    "# preliminary selection of features\n",
-    "df = df[[\"rating\", \"height\", \"weight\", \"games\", \"victories\", \"ties\", \"defeats\", \"goals\", \"yellowCards\", \"yellowReds\", \"redCards\"]]\n",
-    "# drop instances with undefined values => check if there aer better options: https://en.wikipedia.org/wiki/Missing_data\n",
-    "df = df.dropna()"
+    "data = np.array(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = np.array(df[[\"rating\", \"height\", \"weight\", \"games\", \"victories\", \"ties\", \"defeats\", \"goals\", \"yellowCards\", \"yellowReds\", \"redCards\"]])\n",
-    "y = np.array(df[\"redCards\"] / df[\"games\"])"
+    "lb = LabelBinarizer()\n",
+    "club = lb.fit_transform(data[:,2])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 262,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lb = LabelBinarizer()\n",
+    "league = lb.fit_transform(data[:,3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 263,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lb = LabelBinarizer()\n",
+    "position = lb.fit_transform(data[:,7])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 264,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "refCountry = data[:,20] # are ordinal numbers = transform to one-hot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 265,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "skintone = data[:,28]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 266,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "birthday = np.array([ datetime.strptime(date, '%d.%m.%Y') for date in data[:,4]], dtype='datetime64[D]')\n",
+    "age =  np.array(np.datetime64(datetime.now()) - birthday, dtype=\"timedelta64[Y]\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 267,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "games = data[:,8]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 268,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "victories = data[:,9]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 269,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ties = data[:,10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 270,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "defeats = data[:,11]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 271,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "goals = data[:,12]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 272,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "yellowCards = data[:,13]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 273,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "refNum = data[:,19]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 274,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "allReds = data[:,29]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 275,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exclude playerShort, player, club (adds too many dimensions at the moment), birthday (use age instead), \n",
+    "x = np.column_stack((league, position, refCountry, skintone, age, games, victories, ties, defeats, goals, yellowCards, refNum, refCountry))\n",
+    "y = np.array(allReds / games)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 276,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(350269, 27)"
+      ]
+     },
+     "execution_count": 276,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 277,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 278,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,16 +244,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 279,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.0007450238012380009"
+       "0.0016856561289310193"
       ]
      },
-     "execution_count": 182,
+     "execution_count": 279,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,38 +267,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 280,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4.056873982191155e-07"
-      ]
-     },
-     "execution_count": 183,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "regr = RandomForestRegressor()\n",
-    "regr = regr.fit(X_train, y_train)\n",
-    "prediction = regr.predict(X_test)\n",
-    "mean_squared_error(y_test, prediction)"
+    "#regr = RandomForestRegressor()\n",
+    "#regr = regr.fit(X_train, y_train)\n",
+    "#prediction = regr.predict(X_test)\n",
+    "#mean_squared_error(y_test, prediction)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 281,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.0007450209493935446\n",
-      "0.0007450209493935446\n"
+      "0.0016856726083804797\n",
+      "0.0016856726083804797\n"
      ]
     }
    ],
