fix(ex04a): small correction in crossfeedback

--- a/ex04a/cross_feedback/red-cards.ipynb
+++ b/ex04a/cross_feedback/red-cards.ipynb
@@ -591,7 +591,9 @@
    "metadata": {},
    "source": [
     "<div style=\"color: green; font-weight: bold\">\n",
-    "Whether IAT and Exp scores are irrelevant is depa\n",
+    "Whether IAT and Exp scores are irrelevant is debateable.\n",
+    "    \n",
+    "The accumulation over players later would make them irrelevant though.\n",
     "</div>"
    ]
   },
