feat(ex04a): feedback submission

--- a/ex04a/ex04a-commented.ipynb
+++ b/ex04a/ex04a-commented.ipynb
@@ -507,6 +507,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"color: green; font-weight: bold\">\n",
+    "We did not groupby + accumulate over the players which was intended by the exercise. In retrospect this makes sense since we really only want to consider the player related features in the context of the red cards and not the referees. \n",
+    "    \n",
+    "The example notebook emphasized the importance of the player-referee dyads in general so we thought this data was also important for this tasks (which it was not).\n",
+    "</div>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -886,7 +897,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -989,6 +1002,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"color: green; font-weight: bold\">\n",
+    "Should've just droped those scores instead of whatever we did here.\n",
+    "</div>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
@@ -1046,6 +1068,15 @@
     "df.bias_score = df.bias_score.fillna(df.bias_score.mean())\n",
     "df.height = df.height.fillna(df.height.mean())\n",
     "df.weight = df.weight.fillna(df.weight.mean())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"color: green; font-weight: bold\">\n",
+    "Dropping all entries with rating difference larger than 0.25 would have been a bit better.\n",
+    "</div>"
    ]
   },
   {
@@ -1110,6 +1141,15 @@
    "metadata": {},
    "source": [
     "### one hot encoding"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"color: green; font-weight: bold\">\n",
+    "Encoding larger categories into enum like rows could have been a reasonable approach that could have kept the training times lower.\n",
+    "</div>"
    ]
   },
   {
@@ -1189,6 +1229,15 @@
    ],
    "source": [
     "x.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"color: green; font-weight: bold\">\n",
+    "This cell can be ignored, we just forgot to delete it. This is now done above in the data preparation.\n",
+    "</div>"
    ]
   },
   {
@@ -1324,13 +1373,6 @@
     "perm_forest_estimators = sum([f['estimator'] for f in perm_forest_results], [])\n",
     "perm_forest_scores = [f['test_score'] for f in perm_forest_results]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
