--- a/ex04a/ex04a-cross-feedback.ipynb
+++ b/ex04a/ex04a-cross-feedback.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "371f9ea3-1cf5-494e-98fc-7e3daac2c863",
    "metadata": {},
    "source": [
     "## 1.1 Euclidian Distance\n",
@@ -12,7 +11,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "33896621-56f2-419d-aa93-76e4d6e3a6a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +30,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c7bf815b-8d3e-401a-a1ba-a9b93392325b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +45,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "09484624-d80f-4fcc-b776-7d9cadb104ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +95,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e69b3711",
    "metadata": {},
    "source": [
     "<div style=\"color: green; font-weight: bold\">Calculation of precision and gain looks good. Vectroization would be nice</div>\n"
@@ -108,7 +103,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "767e3eb5-29f4-40de-b27f-ed44554fc987",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +121,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "243539a5-f7ba-4f1f-8cf6-6c92ab7ba278",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +132,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "118a3ed2",
    "metadata": {},
    "source": [
     "<div style=\"color: green; font-weight: bold\">Did not compute AUC values for each k</div>"
@@ -147,7 +139,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93720eae",
    "metadata": {},
    "source": [
     "<div style=\"color: green; font-weight: bold\">The plots should have precision and recall axis</div>\n"
@@ -155,7 +146,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08018fa6",
    "metadata": {},
    "source": [
     "<div style=\"color: green; font-weight: bold\">All classes k can be drawn in a single plot using different color</div>\n"
@@ -164,7 +154,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "390ef1f1",
    "metadata": {
     "scrolled": false
    },
@@ -297,7 +286,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e36d57e6-fcfa-41eb-ac85-6dc5ff66b6a5",
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +307,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d06a48c8",
    "metadata": {},
    "source": [
     "<div style=\"color: green; font-weight: bold\">Looks fine, very similar to the formula on the exercise sheet</div>\n"
@@ -327,7 +314,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f5a3094",
    "metadata": {},
    "source": [
     "<div style=\"color: green; font-weight: bold\">Did not compute AUC values for each k</div>\n"
@@ -336,7 +322,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "7064e14b-61fd-4c43-a2e9-774fc2e4aa79",
    "metadata": {
     "scrolled": false,
     "tags": []
@@ -469,7 +454,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e92df84b-139f-4c44-bdcb-2dba478511d4",
    "metadata": {},
    "source": [
     "We can see that the pricision and recall curves depend more on the observed class (the digit which is being observed) than the precision gain and recall gain curve.\n",
@@ -478,7 +462,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3d5cf57",
    "metadata": {},
    "source": [
     "## 1.2 Hand-Crafted Distance"
@@ -487,7 +470,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "fd2951c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,7 +486,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "f9dba8cc",
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +510,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12467c30-08a0-4f3e-b377-1e0a8d8a4abc",
    "metadata": {},
    "source": [
     "# Exercise 2\n",
@@ -537,9 +517,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"color: green; font-weight: bold\">\n",
+    "The data preperation steps are in general really good.\n",
+    "</div>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d75a02b1-973f-4909-9f27-ca5c5081f736",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -561,7 +549,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac992e78-122d-478d-8c77-139723196769",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -572,7 +559,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "921fb72e-42b1-449b-9829-2222287ea51c",
    "metadata": {},
    "source": [
     "### Step 1: Age of Players"
@@ -581,7 +567,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10d28276-3b2e-4ab8-a51e-716a586d946c",
    "metadata": {},
    "outputs": [
     {
@@ -618,7 +603,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b3b6749-7343-48b7-8cec-47d45acc0960",
    "metadata": {},
    "source": [
     "### Step 2: Irrelevant Information\n",
@@ -635,7 +619,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd56a7e5-e182-4d14-b6af-4f45792a81a7",
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +644,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18ac8c09-15ea-49be-b7be-fadf43cfc11e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -672,7 +654,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb141498-e0a5-4d64-9361-1a0ac07e74d7",
    "metadata": {},
    "source": [
     "### Step 3: Missing Information "
@@ -681,7 +662,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78e6d5d3-f7a1-42b7-b93f-ea505b7a4448",
    "metadata": {},
    "outputs": [
     {
@@ -718,7 +698,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0fb240df-128a-47b9-9107-237f5a99fa9e",
    "metadata": {},
    "source": [
     "We can impute the information with mean values (or other strategies), but we choose to drop the pairs, for which information is missing, as our data set is large, and there is no quite plausible strategy to impute missing information here. "
@@ -727,7 +706,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7bd745ff-1c25-44d0-b29d-715209e09ec3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -740,7 +718,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c70d2a0e-5477-4865-85db-7472e43d3a1b",
    "metadata": {},
    "source": [
     "### Step 4: Country of the League\n",
@@ -750,9 +727,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"color: green; font-weight: bold\">\n",
+    "Using the pandas get_dummies function is a bit more straight forward but this also correct.\n",
+    "</div>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0dd0ffb-bc71-4dc3-a13b-fa27a22cd92c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -780,7 +765,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbc91fd3-622a-4e74-a560-1bb7bb06e8f3",
    "metadata": {},
    "source": [
     "### Step 5: Skin Color Ratings\n",
@@ -791,7 +775,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0614d919-e536-451b-9c4c-1a0f78a41e74",
    "metadata": {},
    "outputs": [
     {
@@ -816,7 +799,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "096204ec-8982-4ea7-9d00-00193bc67b45",
+   "metadata": {},
+   "source": [
+    "<div style=\"color: green; font-weight: bold\">\n",
+    "This is a really good approach.\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "The independent raters have different ratings in 27132 pairs, however their ratings differ more than 0.25 in only 164 pairs. We also drop these 164 pairs out, as the ratings are not trustworthy. Then we take the mean of the remaining ratings and use this information in the following."
@@ -825,7 +816,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb999dce-b98f-4eca-bc98-63f7eae84406",
    "metadata": {},
    "outputs": [
     {
@@ -1182,7 +1172,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4cc4288-9c5b-45a0-a25b-19b3015bfa89",
    "metadata": {},
    "source": [
     "### Step 6: One Line for each Player\n",
@@ -1197,7 +1186,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98a97079-cc05-451b-b86e-2cba762b8750",
    "metadata": {},
    "outputs": [
     {
@@ -1574,7 +1562,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb075451-1520-41e7-8dc0-6ce91026ccee",
    "metadata": {},
    "source": [
     "### Step 7: Club, playerShort, Position\n",
@@ -1585,7 +1572,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a11e7fef-5dad-4a84-b468-5bf75d8b6e6b",
    "metadata": {},
    "outputs": [
     {
@@ -1913,7 +1899,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "490035ce-bc73-4924-a8c9-181e79a37000",
    "metadata": {},
    "source": [
     "Each player occurs once, which might mean that we have made a mistake. (Players could change clubs etc.)"
@@ -1921,7 +1906,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87b489ce-f945-4efb-b519-153480f05f9a",
    "metadata": {},
    "source": [
     "## 2.2"
@@ -1929,16 +1913,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "379bd0b2-ea25-4eb4-a6d7-329c35873d69",
    "metadata": {},
    "source": [
     "We now create models and calculate the squared test errors by means of crossvalidation.\n"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"color: green; font-weight: bold\">\n",
+    "The transformation to numpy array is not necessary and makes it a lot harder to follow because of the number of indices.\n",
+    "</div>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9deaf49a-9a3e-4912-9026-8a09c0785735",
    "metadata": {},
    "outputs": [
     {
@@ -1974,7 +1965,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e558d3df-5460-4990-983d-24600301b777",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1983,9 +1973,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"color: green; font-weight: bold\">\n",
+    "Random forest is missing.\n",
+    "    \n",
+    "The return is one indentation too far in which means that the loop only ever runs once.\n",
+    "</div>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "951216f7-81f9-41cf-9bb9-2c7a8396e249",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2011,7 +2011,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5cdb0bb8-3561-48e5-b8c0-f4dae3dcbaa1",
    "metadata": {},
    "outputs": [
     {
@@ -2032,16 +2031,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "416b4d66-27c6-440b-b853-246799ef15d1",
    "metadata": {},
    "source": [
     "### 2.3 "
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"color: green; font-weight: bold\">\n",
+    "shuf_data = resdat should probably be a copy since the unshuffled version is needed for the comparisons later.\n",
+    "</div>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12a9ea0b-4b89-4ef0-8eb4-8940b81160d5",
    "metadata": {},
    "outputs": [
     {
@@ -2076,9 +2082,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"color: green; font-weight: bold\">\n",
+    "we could also not find the reason for why the predict function raises a value error <br/>\n",
+    "    \n",
+    "ValueError: Input contains NaN, infinity or a value too large for dtype('float64')\n",
+    "    \n",
+    "but looking for NaNs or infinity values in the data brings up nothing.\n",
+    "</div>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e07a0722-cdfa-4228-bc4a-850d1026748d",
    "metadata": {},
    "outputs": [
     {
@@ -2102,19 +2120,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0eac69db-3d29-460c-9c15-34eae4a3900e",
    "metadata": {},
    "source": [
     "does not work..."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d3aedba5-94e1-4916-9385-dd0573468ea3",
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<div style=\"color: green; font-weight: bold\">\n",
+    "2.4 and 2.5 missing\n",
+    "</div>"
+   ]
   }
  ],
  "metadata": {
