--- a/ex05/tomography.ipynb
+++ b/ex05/tomography.ipynb
@@ -35,10 +35,13 @@
     "    N =  No * Np            # flattened array length of intensitie measurements\n",
     "    D = M * M               # flattened array length of tomogram\n",
     "\n",
+    "    # Compute two indices a and b for each pixel\n",
     "    ja = np.mgrid[0:D] % M\n",
     "    jb = (np.mgrid[0:D] - ja) / M\n",
     "\n",
     "    C = np.array([ja, jb])\n",
+    "\n",
+    "    # Move pixels such that the middle pixel (M/2, M/2) is in the origin of the coordinate system\n",
     "    C_moved = C - np.array([[M / 2],[M / 2]])\n",
     "\n",
     "    all_weights = []\n",
@@ -48,18 +51,25 @@
     "    for io in range(No):\n",
     "\n",
     "        alpha = np.radians(alphas[io])\n",
+    "        # Calculate unit vector in direction of sensor array using 2D rotation matrix\n",
+    "        # negate the y value, as coordinate system goes the \"opposite\" direction\n",
     "        n = np.array([[math.cos(alpha)], [-math.sin(alpha)]])\n",
     "        p = np.dot(n.T, C_moved) \n",
     "\n",
     "        p = p[0]\n",
+    "\n",
+    "        # Center of sensor array is at origin => add half the length of the sensor array\n",
     "        p = p + Np / 2\n",
     "\n",
+    "        # Calculate index of the two sensors\n",
     "        idx_sensor1 = np.floor(p) + Np * io\n",
     "        idx_sensor2 = np.ceil(p) + Np * io\n",
     "\n",
+    "        # Calculate the weights of the two sensors\n",
     "        weight2 = p - np.floor(p)\n",
     "        weight1 = 1 - weight2\n",
     "\n",
+    "        # Calculate the index of the pixels\n",
     "        idx_pixel1 = np.mgrid[0:D]\n",
     "        idx_pixel2 = np.mgrid[0:D]\n",
     "\n",
