--- a/ex06/tomography.ipynb
+++ b/ex06/tomography.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,12 +19,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1"
+    "# 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,8 +168,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note, that the image looks distorted because the size of alpha was limited to 64 angles, as required by the exercise. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -457,6 +464,61 @@
    ],
    "source": [
     "test_gaussian_filter(y=y_195, tolerance=3e-3, M=195, alphas=alphas_195, Np=275, sigma=7, alphasize=64)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def omp_regression(X, y, T, tolerance=3e-3):\n",
+    "    D = X.shape[1]\n",
+    "    X_ = X.copy()\n",
+    "    X_current = X\n",
+    "    j_current = None\n",
+    "    r_current = y\n",
+    "    A = np.array([])\n",
+    "    B = np.mgrid[1:D]\n",
+    "    beta = None\n",
+    "    for t in range(T):\n",
+    "        j_current = np.argmax(np.dot(X_current.T, r_current))\n",
+    "        A = np.append(A, j_current)\n",
+    "        B = np.delete(B, j_current)\n",
+    "        X = X_[:,A]\n",
+    "        beta_, solution_, *_ = scipy.sparse.linalg.lsqr(X, y, atol=tolerance, btol=tolerance)\n",
+    "        beta = beta_\n",
+    "        r_current = y - np.dot(X, beta)\n",
+    "    return beta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test_omp_regression(y, tolerance, M, alphas, Np, alphasize):\n",
+    "    fig, ax = plt.subplots()\n",
+    "    alphas = alphas[:alphasize]\n",
+    "    y = y[0:Np*alphasize]\n",
+    "    X = construct_X(M, alphas, Np)\n",
+    "    X = scipy.sparse.csc_matrix(X)\n",
+    "    beta = omp_regression(X, y, M*M, tolerance)\n",
+    "    img = beta.reshape((M, M))\n",
+    "\n",
+    "    ax.imshow(img)\n",
+    "    ax.add_patch(patches.Rectangle((120, 40), 30, 80, angle=60, linewidth=1, edgecolor='r', facecolor='none'))\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_omp_regression(y=y_195, tolerance=3e-3, M=195, alphas=alphas_195, Np=275, alphasize=64)"
    ]
   }
  ],
