--- a/ex06/tomography.ipynb
+++ b/ex06/tomography.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -468,52 +468,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.linalg import lstsq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
    "metadata": {},
    "outputs": [],
    "source": [
     "def omp_regression(X, y, T, tolerance=3e-3):\n",
     "    D = X.shape[1]\n",
+    "    N = X.shape[0]\n",
     "    X_inactive = X\n",
     "    X_active = np.array([])\n",
     "    j_current = None\n",
     "    r_current = y\n",
-    "    A = np.array([])\n",
-    "    B = np.mgrid[1:D]\n",
+    "    A = np.array([], dtype=int)\n",
+    "    B = np.mgrid[0:D]\n",
+    "    solution = np.zeros((T, D))\n",
     "    for t in range(T):\n",
     "        j_current = np.argmax(X_inactive.T.dot(r_current))\n",
     "        A = np.append(A, j_current)\n",
-    "        B = np.delete(B, j_current)\n",
-    "        X_active = X[:,A]\n",
-    "        X_inactive = X[:,B]\n",
-    "        beta, solution_, *_ = scipy.sparse.linalg.lsqr(X_active, y, atol=tolerance, btol=tolerance)\n",
-    "        r_current = y - X_active.dot(beta)\n",
-    "    return beta"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def test_omp_regression(y, tolerance, M, alphas, Np, alphasize):\n",
-    "    fig, ax = plt.subplots()\n",
-    "    alphas = alphas[:alphasize]\n",
-    "    y = y[0:Np*alphasize]\n",
-    "    X = construct_X(M, alphas, Np)\n",
-    "    X = scipy.sparse.csc_matrix(X)\n",
-    "    beta = omp_regression(X, y, M*M, tolerance)\n",
-    "    img = beta.reshape((M, M))\n",
+    "        B = B[B != j_current]\n",
+    "        print(j_current)\n",
+    "        \n",
+    "        X_active = np.zeros((N,D))\n",
+    "        X_active[:,A] = X[:,A]\n",
     "\n",
-    "    ax.imshow(img)\n",
-    "    ax.add_patch(patches.Rectangle((120, 40), 30, 80, angle=60, linewidth=1, edgecolor='r', facecolor='none'))\n",
-    "    plt.show()"
+    "        X_inactive = np.zeros((N,D))\n",
+    "        X_inactive[:,B] = X[:,B]\n",
+    "\n",
+    "        beta, *_ = lstsq(X_active, y)\n",
+    "        r_current = y - X_active.dot(beta)\n",
+    "        np.put(solution[t], np.sort(A), beta)\n",
+    "    return solution"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -546,19 +544,143 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0 1 0 ... 0 0 0]\n"
+      "19\n",
+      "63\n",
+      "55\n",
+      "16\n",
+      "24\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "0\n"
      ]
     }
    ],
    "source": [
-    "omp_regression(data, y, )"
+    "beta = omp_regression(data, y, 30)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-1.28516891e-18,  0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
+       "        0.00000000e+00,  0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
+       "        0.00000000e+00,  0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
+       "        0.00000000e+00,  0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
+       "        0.00000000e+00,  0.00000000e+00,  0.00000000e+00,  1.00613962e-15,\n",
+       "        0.00000000e+00,  0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
+       "       -3.36536354e-16,  0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
+       "        0.00000000e+00,  0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
+       "        0.00000000e+00,  0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
+       "        0.00000000e+00,  0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
+       "        0.00000000e+00,  0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
+       "        0.00000000e+00,  0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
+       "        0.00000000e+00,  0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
+       "        0.00000000e+00,  0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
+       "        0.00000000e+00,  0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
+       "        0.00000000e+00,  0.00000000e+00,  0.00000000e+00,  0.00000000e+00])"
+      ]
+     },
+     "execution_count": 173,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "beta[5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(64,)"
+      ]
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "beta[0].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1797, 64)"
+      ]
+     },
+     "execution_count": 133,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.0"
+      ]
+     },
+     "execution_count": 166,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(y - data.dot(beta[29]))"
    ]
   }
  ],
