--- a/ex06/cross_feedback/regularized-regression.ipynb
+++ b/ex06/cross_feedback/regularized-regression.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b90a8869",
    "metadata": {},
    "source": [
     "# Exercise 6\n",
@@ -12,7 +11,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2562202",
+   "metadata": {},
+   "source": [
+    "<div style=\"color:green; font-weight: bold\">\n",
+    "Does differ quite a bit from the sample solution but seems to be correct.\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Show that\n",
@@ -40,16 +47,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dde21a43",
    "metadata": {},
    "source": [
     "## 2 Denoising of a CT image"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"color:green; font-weight: bold\">\n",
+    "Use of tau instead of sqrt(tau)\n",
+    "</div>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "8eb129fb",
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +428,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8a3346f",
    "metadata": {},
    "source": [
     "We can see that while the Gaussian filter retains contrasts better, for large Gaussian sigmas, the ridge regression retains more detail even at high taus, at the cost of some contrast. As we can see, the ridge regression has a higher bias and lower variance in comparison to the Gaussian filter, that introduces a higher variance but has a lower bias."
@@ -422,7 +435,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8aa5a9d",
    "metadata": {},
    "source": [
     "## 3 Automatic feature selection for regression\n",
@@ -430,9 +442,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"color:green; font-weight: bold\">\n",
+    "Does not apply abs to j\n",
+    "</div>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "cd7c6889",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,16 +484,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58de3859",
    "metadata": {},
    "source": [
     "### 3.2 Classification with sparse LDA"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"color:green; font-weight: bold\">\n",
+    "Seems good\n",
+    "</div>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "43058668",
    "metadata": {},
    "outputs": [
     {
@@ -589,24 +616,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff59ee67",
    "metadata": {},
    "source": [
     "We can see that OMP seperates better than our previous method for feature selection."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "62350fe9",
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<div style=\"color:green; font-weight: bold\">\n",
+    "3.3 missing\n",
+    "</div>"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -620,7 +647,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
